# vault-docs

./: .env.example  .gitattributes  .gitignore  AI_USAGE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  lifecycle.py  main.py  providers.py  rag.py  services.py
app/api/: chat.py  deps.py  documents.py  health.py  metrics.py
app/ingestion/: chunk.py  extract.py
app/models/: __init__.py  document.py
app/storage/: base.py  local.py
app/tasks/: process.py
db/init/: 01-extensions.sql
docs/: product-context.md
evals/: __init__.py  baseline.json  gold.json  run.py  scorers.py
evals/corpus/: acord-style-gl-application.txt  meridian-loss-run-2021-2025.txt  northwind-property-policy.txt  warehouse-fire-protection-article.txt
static/: index.html
tests/: conftest.py  test_answering.py  test_chat_api.py  test_chunking.py  test_documents_api.py  test_eval_scorers.py  test_extraction.py  test_lifecycle.py  test_metrics_api.py  test_rag.py  test_storage.py
